<resources>
    <string name="app_name">Plan de Classe</string>
    <string name="version">V 1.3</string>
    <string name="notes_version">Il s\'agit de la version de lancement, appelée à évoluer. De nombreuses améliorations sont en cours de développement.</string>
    <string name="hint_nom_de_la_classe">Nom de la classe</string>
    <string name="txt_dimensions_classe">dimensions de la classe</string>
    <string name="hint_nb_colonnes">colonnes</string>
    <string name="hint_nb_rangees">rangées</string>
    <string name="hint_commentaires_classe">Commentaires</string>
    <string name="txt_btn_voir">Voir</string>
    <string name="txt_exemple">Exemple</string>
    <string name="dsc_img_exemple">Schéma explicatif pour la configuration d\'une classe</string>
    <string name="dsc_listes_classes">liste des classes</string>
    <string name="dsc_ajouter_classe">ajouter une classe</string>
    <string name="dsc_btn_gallerie">Voir les plans de classes enregistrés</string>
    <string name="txt_bienvenue_liste_classes">Bienvenue! \nCréez votre première classe en utilisant le petit bouton vert.</string>
    <string name="dsc_image_enr">plan de classe</string>
    <string name="txt_defaut_gallerie">Aucune image enregistrée</string>
    <string name="dsc_btn_ajouter_eleve">ajouter un élève</string>
    <string name="txt_bienvenue_liste_eleves">Il est temps de créer vos élèves.\nUtilisez le petit bouton vert pour commencer.</string>
    <string name="btn_fin_liste_eleves">Réaliser un plan de classe</string>
    <string name="txt_contact">Un problème? Une question? Une suggestion? Une réclamation? Dites Nous tout! \n Notre service d\'assistance est à votre écoute.</string>
    <string name="hint_message">Votre message</string>
    <string name="btn_envoyer">Envoyer</string>
    <string name="txt_infos_critères">Indiquez l\'importance de chaque critère dans la réalisation du plan de classe</string>
    <string name="txt_infos_activer_critere">Activer ce critère</string>
    <string name="txt_infos_imp_critere">Importance du critère</string>
    <string name="btn_inf_aff_e">affinités (exclusion)</string>
    <string name="off">Off</string>
    <string name="secondaire">Secondaire</string>
    <string name="important">Important</string>
    <string name="btn_infos_aff_i">affinités (inclusion)</string>
    <string name="btn_infos_vue">vue</string>
    <string name="btn_infos_taille">taille</string>
    <string name="btn_infos_alt_fg">alternance F/G</string>
    <string name="btn_infos_alt_ac">alternance agité/calme</string>
    <string name="btn_infos_alt_fd">alternance fort/en difficulté</string>
    <string name="btn_infos_rep_moteurs">Répartir élèves moteurs dans la classe</string>
    <string name="btn_infos_ordre_alpha">ordre alphabétique</string>
    <string name="btn_gerer_eleves">Gérer les élèves classe</string>
    <string name="btn_details_criteres">Il est possible de revenir plus tard sur cette page \n \n Une description de chaque critère est disponible en appuyant quelques secondes sur le texte</string>
    <string name="hint_nom_eleve">Nom de l\'élève *</string>
    <string name="txt_placement">Placement:</string>
    <string name="radio_plac_1">devant</string>
    <string name="radio_plac_2">au fond</string>
    <string name="radio_plac_3">sans importance</string>
    <string name="txt_genre">Genre</string>
    <string name="radio_genre_f">Fille</string>
    <string name="radio_genre_g">garçon</string>
    <string name="txt_doit_eviter">Doit éviter:</string>
    <string name="btn_liste">(liste)</string>
    <string name="btn_devrait_etre_avec">Devrait être avec:</string>
    <string name="txt_taille">Taille</string>
    <string name="radio_taille_1">Grande</string>
    <string name="radio_taille_2">Moyenne</string>
    <string name="radio_taille_3">petite</string>
    <string name="txt_vue">Vue</string>
    <string name="radio_vue_1">Bonne</string>
    <string name="radio_vue_2">Moyenne</string>
    <string name="radio_vue_3">Mauvaise</string>
    <string name="txt_serieux">Sérieux de l\'élève</string>
    <string name="radio_diff_1">difficultés</string>
    <string name="radio_diff_2">à l\'aise</string>
    <string name="radio_diff3">dans la moyenne</string>
    <string name="radio_calme_1">agité</string>
    <string name="radio_calme_2">calme</string>
    <string name="radio_calme_3">dans la moyenne</string>
    <string name="txt_autre">Autre</string>
    <string name="check_dys">dyslexique</string>
    <string name="check_iso">isoler</string>
    <string name="check_moteur">élève moteur</string>
    <string name="txt_importance_eleve">Importance du traitement de l\'élève</string>
    <string name="btn_placement_manuel">Placer manuellement l\'élève</string>
    <string name="btn_plus_param">Plus de paramètres</string>
    <string name="hint_commentaires_eleve">Commentaires</string>
    <string name="btn_enr">Enregistrer</string>
    <string name="dsc_apercu_classe">aperçu de la classe</string>
    <string name="defaut_nom_classe">CLASSE X</string>
    <string name="defaut_nb_eleves">X ELEVES</string>
    <string name="defaut_txt_commentaires">COMMENTAIRES</string>
    <string name="dsc_icon_eleve">icon eleve</string>
    <string name="defaut_nom_eleve">ELEVE X</string>
    <string name="defaut_commentaire_eleve">ELEVE BOF</string>
    <string name="dsc_pastille_couleur">pastille de couleur</string>
    <string name="aide_aff_e">Correspond aux élèves qui devront être éloignés</string>
    <string name="aide_aff_i">Correspond aux élèves qui devront être réunis</string>
    <string name="aide_vue">Le plan prendra en compte la taille et la vue des élèves, pour placer ceux avec la moins bonne vue devant, et éviter qu\'un grand élève empêche à un plus petit de voir le tableau</string>
    <string name="aide_taille">Le plan prendra en compte la taille des élèves, pour placer les plus petits devant et les plus grands derrières</string>
    <string name="aide_alt_fg">Le plan présentera une alternance de fille et graçon sur chaque rang</string>
    <string name="aide_alt_ac">Le plan associera les élèves calmes et agités, pour que ces derniers soient moins bavards, du fait de leur voisin calme</string>
    <string name="aide_alt_df">Le plan associera les élèves en difficultés avec ceux qui sont le plus à l\'aise</string>
    <string name="aide_asso_dm">Les élèves indiqués comme "moteur" seront répartis dans la classe, pour la dynamiser</string>
    <string name="aide_ordre_alpha">Les élèves seront classés par ordre alphabétique.</string>
    <string name="btn_liste_eleve_suivant">paramétrer la classe</string>
    <string name="txt_niveau">Niveau de l\'élève</string>
    <string name="txt_valider">Valider</string>
    <string name="txt_annuler">Annuler</string>
</resources>