<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="2dp"
        android:background="#BCBCBC"
        android:foregroundTint="#EF0C0C"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            android:contentDescription="@string/dsc_icon_eleve" />

        <TextView
            android:id="@+id/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defaut_nom_eleve" />

        <TextView
            android:id="@+id/suplement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defaut_commentaire_eleve" />
        <ImageView
            android:id="@+id/couleur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:tint="#FFFFFF00"
            app:srcCompat="@drawable/ic_baseline_adjust_24"
            android:contentDescription="@string/dsc_pastille_couleur" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>