<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nom_de_la_classe">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nom_classe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/txt_dimensions_classe"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/hint_nb_colonnes"
                    android:inputType="number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/colonnes"
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_nb_rangees"
                    android:inputType="number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/rangees"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/hint_commentaires_classe"
                android:inputType="number"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commentaires_classe_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/appliquer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_btn_voir" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_exemple"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/dsc_img_exemple"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/salle_de_classe" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>